Bind the release action to Star of the project by project owner. (Cheese way to manually trigger the action for test).

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,12 +4,16 @@ on:
     tags:
     - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
+  watch:
+    types: [started]
+
 name: Upload Release Asset
 
 jobs:
   build:
     name: Upload Release Asset
     runs-on: ubuntu-latest
+    if: github.actor == github.event.repository.owner.login
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
