--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip -r Release EricsGoods
+          zip -r EricsGoods EricsGoods
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
