--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip -r EricsGoods EricsGoods
+          mkdir ./Mods
+          mv ./EricsGoods ./Mods
+          zip -r EricsGoods Mods
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -38,5 +40,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./EricsGoods.zip
-          asset_name: my-EricsGoods.zip
+          asset_name: ${{ github.ref }}.zip
           asset_content_type: application/zip
