--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ on:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
-    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    - 'EricsGoods_v*' # Push events to matching EricsGoods_vv*, i.e. EricsGoods_v1.0, EricsGoods_v20.15.10
 
   watch:
     types: [started]
