--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
           mv ./EricsGoods ./Mods
-          zip -r EricsGoods Mods
+          zip -r EricsGoods Mods Modlet\ readme.md
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
