--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,25 +21,17 @@ jobs:
         run: |
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
+          mv ./EricsGoods/release.md .
           mv ./EricsGoods ./Mods
-          zip -r EricsGoods Mods Modlet\ readme.md
+          zip -r ${{ github.ref }} Mods Modlet\ readme.md release.md
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: ncipollo/release-action@v1.6.1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
+          name: ${{ github.ref }}
+          bodyFile: release.md
+          artifact: ${{ github.ref }}.zip
+          artifactContentType: application/zip
+          draft: true
           prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./EricsGoods.zip
-          asset_name: ${{ github.ref }}.zip
-          asset_content_type: application/zip
+          token: ${{ secrets.GITHUB_TOKEN }}
