--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
+          if [ ${{ github.ref }} == *master ]; ZIPNAME = 'EricsGoods' else ZIPNAME = ${{ github.ref }} fi
+          echo $ZIPNAME
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
           mv ./EricsGoods/release.md .
           mv ./EricsGoods ./Mods
-          zip -r ${{ github.ref }} Mods Modlet\ readme.md release.md
+          zip -r $ZIPNAME Mods Modlet\ readme.md release.md
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1.6.1
