--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          if [ ${{ github.ref }} == *master ]; ZIPNAME = 'EricsGoods' else ZIPNAME = ${{ github.ref }} fi
+          if [ ${{ github.ref }} == *master ]; then ZIPNAME = 'EricsGoods' else ZIPNAME = ${{ github.ref }} fi
           echo $ZIPNAME
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
