--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          if [ $GITHUB_REF == *master ]; then ZIPNAME = 'EricsGoods' else ZIPNAME = $GITHUB_REF fi
+          ZIPNAME = ${GITHUB_REF##*/}
           echo $ZIPNAME
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
