--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          ZIPNAME = ${GITHUB_REF##*/}
-          echo $ZIPNAME
+          echo "::set-env name=ZIPNAME::${GITHUB_REF##*/}"
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
           mv ./EricsGoods/release.md .
@@ -30,9 +29,9 @@ jobs:
         id: create_release
         uses: ncipollo/release-action@v1.6.1
         with:
-          name: ${{ github.ref }}
+          name: $ZIPNAME
           bodyFile: release.md
-          artifact: ${{ github.ref }}.zip
+          artifact: $ZIPNAME.zip
           artifactContentType: application/zip
           draft: true
           prerelease: false
