--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,14 +25,15 @@ jobs:
           mv ./EricsGoods/release.md .
           mv ./EricsGoods ./Mods
           zip -r ${GITHUB_REF##*/} Mods Modlet\ readme.md release.md
+          ls -lsa .
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1.6.1
         with:
-          name: ${{ github.ref }}
+          name: ${{ env.ZIPNAME }}
           tag: ${{ github.ref }}
           bodyFile: release.md
-          artifacts: "*.zip"
+          artifacts: "./*.zip"
           artifactContentType: application/zip
           draft: true
           prerelease: false
