--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,18 +19,25 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          echo "::set-env name=ZIPNAME::${GITHUB_REF##*/}"
+          echo "::set-env name=RELEASE_NAME::${GITHUB_REF##*/}"
+          if [ ${GITHUB_REF##*/} == 'master' ]
+          then
+            ZIPNAME="EricsGoods.zip"
+          else
+            ZIPNAME="${GITHUB_REF##*/}.zip"
+          fi
+          echo "Creating ${ZIPNAME}"
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
           mv ./EricsGoods/release.md .
           mv ./EricsGoods ./Mods
-          zip -r ${GITHUB_REF##*/} Mods Modlet\ readme.md release.md
+          zip -r ${ZIPNAME} Mods Modlet\ readme.md release.md
           ls -lsa .
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1.6.1
         with:
-          name: ${{ env.ZIPNAME }}
+          name: ${{ env.RELEASE_NAME }}
           tag: ${{ github.ref }}
           bodyFile: release.md
           artifacts: "./*.zip"
