--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          echo "::set-env name=RELEASE_NAME::${GITHUB_REF##*/}"
           if [ ${GITHUB_REF##*/} == 'master' ]
           then
             ZIPNAME="EricsGoods.zip"
@@ -27,6 +26,7 @@ jobs:
             ZIPNAME="${GITHUB_REF##*/}.zip"
           fi
           echo "Creating ${ZIPNAME}"
+          echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
           mv ./EricsGoods/release.md .
