--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,9 @@ jobs:
           echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
-          mv ./EricsGoods/release.md .
+          mv ./EricsGoods/Release\ Notes.md .
           mv ./EricsGoods ./Mods
-          zip -r ${ZIPNAME} Mods Modlet\ readme.md release.md
+          zip -r ${ZIPNAME} Mods Modlet\ readme.md Release\ Notes.md
           ls -lsa .
       - name: Create Release
         id: create_release
