Fix reference to release.md in ncipollo/release-action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           name: ${{ env.RELEASE_NAME }}
           tag: ${{ github.ref }}
-          bodyFile: release.md
+          bodyFile: Release Notes.md
           artifacts: "./*.zip"
           artifactContentType: application/zip
           draft: true
