--- a/.github/workflows/MoreBlocks_release.yml
+++ b/.github/workflows/MoreBlocks_release.yml
@@ -1,5 +1,5 @@
 on:
-  release:
+  push:
     # Sequence of patterns matched against refs/tags
     tags:
     - 'MoreBlocks_v*' # Push events to matching MoreBlocks_v*, i.e. MoreBlocks_v1.0, MoreBlocks_v20.15.10
