--- a/.github/workflows/MoreBlocks_release.yml
+++ b/.github/workflows/MoreBlocks_release.yml
@@ -1,6 +1,5 @@
 on:
-  release:
-    # types: [created]    
+  push:
     # Sequence of patterns matched against refs/tags
     tags:
      - 'MoreBlocks_v*' # Push events to matching MoreBlocks_v*, i.e. MoreBlocks_v1.0, MoreBlocks_v20.15.10
@@ -14,7 +13,7 @@ jobs:
   build:
     name: Upload Release Asset
     runs-on: ubuntu-latest
-    # if: github.actor == github.event.repository.owner.login
+    if: github.actor == github.event.repository.owner.login
     # if: github.actor == github.event.repository.owner.login && contains( github.ref, 'MoreBlocks_v')
     steps:
       - name: Checkout code
