More work on avatar placement for the Dune Buggy

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ Gimp
 /@project/Unity/Vehicles.unitypackage
 /NoMoreGuns/Disabled-ModInfo.xml
 /NoMoreGuns
+/@project/Unity/CubeForge.unitypackage
+/@project/Unity/Single6FacesCube.unitypackage
+/MotorcycleAlterations/MotorcycleAlterations2.png
+/NoMoreGuns/ModInfo.xml
