New experimental mod for buggies

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Gimp
 /@project/Unity/Vehicles.unitypackage
 /NoMoreGuns/Disabled-ModInfo.xml
 /NoMoreGuns
@@ -6,3 +5,4 @@ Gimp
 /@project/Unity/Single6FacesCube.unitypackage
 /MotorcycleAlterations/MotorcycleAlterations2.png
 /NoMoreGuns/ModInfo.xml
+*.xcf
