Trying to replace set-env with the new environement file.

--- a/.github/workflows/MoreContainers_release.yml
+++ b/.github/workflows/MoreContainers_release.yml
@@ -30,7 +30,8 @@ jobs:
             ZIPNAME="${GITHUB_REF##*/}.zip"
           fi
           echo "Creating ${ZIPNAME}"
-          echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
+          # echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
+          echo "RELEASE_NAME=${ZIPNAME}\.zip" >> $GITHUB_ENV
           mkdir ./Mods
           mv ./MoreContainers/Release\ Notes.md .
           mv ./MoreContainers ./Mods
