--- a/.github/workflows/MoreContainers_release.yml
+++ b/.github/workflows/MoreContainers_release.yml
@@ -31,7 +31,7 @@ jobs:
           fi
           echo "Creating ${ZIPNAME}"
           # echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
-          echo "RELEASE_NAME=${ZIPNAME}\.zip" >> $GITHUB_ENV
+          echo "RELEASE_NAME=${ZIPNAME%\.zip}" >> $GITHUB_ENV
           mkdir ./Mods
           mv ./MoreContainers/Release\ Notes.md .
           mv ./MoreContainers ./Mods
