--- a/.github/workflows/EricsGoods_release.yml
+++ b/.github/workflows/EricsGoods_release.yml
@@ -26,7 +26,7 @@ jobs:
             ZIPNAME="${GITHUB_REF##*/}.zip"
           fi
           echo "Creating ${ZIPNAME}"
-          echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
+          echo "RELEASE_NAME=${ZIPNAME%\.zip}" >> $GITHUB_ENV
           mkdir ./Mods
           mv ./EricsGoods/Modlet\ readme.md .
           mv ./EricsGoods/Release\ Notes.md .
