Fix old YML files

--- a/.github/workflows/StorageSize_release.yml
+++ b/.github/workflows/StorageSize_release.yml
@@ -26,7 +26,8 @@ jobs:
             ZIPNAME="${GITHUB_REF##*/}.zip"
           fi
           echo "Creating ${ZIPNAME}"
-          echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
+          # echo "::set-env name=RELEASE_NAME::${ZIPNAME%\.zip}"
+          echo "RELEASE_NAME=${ZIPNAME%\.zip}" >> $GITHUB_ENV
           mkdir ./Mods
           mv ./StorageSize/Release\ Notes.md .
           mv ./StorageSize ./Mods
